@@ -1,6 +1,7 @@
 Revision history for Perl module Math::PRBS.
 
 v0.003  IN PROGRESS
+    - (2018-Jun-13) Add `->nbits()`, with test coverage (issue#6)
     - (2018-Jun-13) Fix test coverage (via author tests) for `oeis_anum()`  (issue#4)
     - (2018-Jun-13) Fix documentation mistakes (issue#3)
     - (2018-Jun-13) Fix travis config to only do coverage once, and not run coverage on the .t files
